postgis/k8s/deploy/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: postgis
  name: postgis
  namespace: postgis
spec:
  selector:
    matchLabels:
      app: postgis
  template:
    metadata:
      labels:
        app: postgis
    spec:
      containers:
      - env:
        - name: POSTGRES_PASSWORD
          valueFrom:
            secretKeyRef:
              name: postgis-secret
              key: postgis-password
        - name: POSTGRES_INITDB_ARGS
          value: "--set ssl=on --set ssl_cert_file=/etc/postgresql/ssl/tls.crt --set ssl_key_file=/etc/postgresql/ssl/tls.key --set ssl_ca_file=/etc/postgresql/ssl/ca.crt"
        image: postgis/postgis:17-master
        imagePullPolicy: Always
        name: postgis-app
        ports:
        - containerPort: 5432
          protocol: TCP
        volumeMounts:
        - mountPath: /etc/postgresql/ssl
          name: postgis-ssl
          readOnly: false
        - mountPath: /var/lib/postgresql/data
          subPath: data
          name: postgis-volume
          readOnly: false
      restartPolicy: Always
      securityContext:
        runAsUser: 999
        runAsGroup: 999
        fsGroup: 999
      volumes:
      - name: postgis-ssl
        projected:
          sources:
          - configMap:
              name: kube-root-ca.crt
          - secret:
              name: postgis-tls
          defaultMode: 0600
      - name: postgis-volume
        persistentVolumeClaim:
          claimName: postgis-pvc
