postgis/k8s/deploy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: postgis
  name: postgis-service
  namespace: postgis
spec:
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: postgis
